--- a/index.html
+++ b/index.html
@@ -7,12 +7,26 @@
     , initial-scale=1.0">
     <title>RockPaperScissors</title>
     <link rel="stylesheet" href="styles/style.css">
+    <script src="scripts/script.js" defer></script>
 </head>
 <body>
-    
-
-
-
-    <script src="scripts/script.js"></script>
+    <div class="start">
+        <button class="start">Start Game</button>
+    </div>
+    <div class="rps-menu">
+        <button class="rps-choice" value="rock">Rock</button>
+        <button class="rps-choice" value="paper">Paper</button>
+        <button class="rps-choice" value="scissors">Scissors</button>
+    </div>
+    <div class="results">
+        <div class="playerScoreBoard">
+            <h3>Player Score: </h3>
+            <h3 class="playerScorescore"> 0</h3>
+        </div>
+        <div class="computerScoreBoard">
+            <h3>Computer Score: </h3>
+            <h3 class="computerScore  score"> 0</h3>
+        </div>
+    </div>
 </body>
 </html>
