Revise the playing functionality

--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
 </head>
 <body>
     <div class="start">
-        <button class="start">Start Game</button>
+        <button class="startButton">Start Game</button>
     </div>
     <div class="rps-menu">
-        <button class="rps-choice" value="rock">Rock</button>
-        <button class="rps-choice" value="paper">Paper</button>
-        <button class="rps-choice" value="scissors">Scissors</button>
+        <button class="rps-choice" value="rock" disabled>Rock</button>
+        <button class="rps-choice" value="paper" disabled>Paper</button>
+        <button class="rps-choice" value="scissors" disabled>Scissors</button>
     </div>
     <div class="results">
         <div class="playerScoreBoard">
             <h3>Player Score: </h3>
-            <h3 class="playerScorescore"> 0</h3>
+            <h3 class="playerScore score"></h3>
         </div>
         <div class="computerScoreBoard">
             <h3>Computer Score: </h3>
-            <h3 class="computerScore  score"> 0</h3>
+            <h3 class="computerScore  score"></h3>
         </div>
     </div>
 </body>
