--- a/index.html
+++ b/index.html
@@ -19,13 +19,18 @@
         <button class="rps-choice" value="scissors" disabled>Scissors</button>
     </div>
     <div class="results">
-        <div class="playerScoreBoard">
-            <h3>Player Score: </h3>
-            <h3 class="playerScore score"></h3>
+        <div class="scoreBoard">
+            <div class="playerScoreBoard">
+                <h3>Player Score: </h3>
+                <h3 class="playerScore score"></h3>
+            </div>
+            <div class="computerScoreBoard">
+                <h3>Computer Score: </h3>
+                <h3 class="computerScore  score"></h3>
+            </div>
         </div>
-        <div class="computerScoreBoard">
-            <h3>Computer Score: </h3>
-            <h3 class="computerScore  score"></h3>
+        <div class="narration-container">
+            <p class="narration"></p>
         </div>
     </div>
 </body>
