--- a/index.html
+++ b/index.html
@@ -10,28 +10,61 @@
     <script src="scripts/script.js" defer></script>
 </head>
 <body>
-    <div class="start">
-        <button class="startButton">Start Game</button>
-    </div>
-    <div class="rps-menu">
-        <button class="rps-choice" value="rock" disabled>Rock</button>
-        <button class="rps-choice" value="paper" disabled>Paper</button>
-        <button class="rps-choice" value="scissors" disabled>Scissors</button>
-    </div>
+    <h1>Rock Paper Scissors</h1>
     <div class="results">
         <div class="scoreBoard">
-            <div class="playerScoreBoard">
-                <h3>Player Score: </h3>
-                <h3 class="playerScore score"></h3>
+            <div class="playerScoreBoard board">
+                <h3>Player Life: </h3>
+                <span class="circle hl1"></span>
+                <span class="circle hl2"></span>
+                <span class="circle hl3"></span>
+                <span class="circle hl4"></span>
+                <span class="circle hl5"></span>
             </div>
-            <div class="computerScoreBoard">
-                <h3>Computer Score: </h3>
-                <h3 class="computerScore  score"></h3>
+            <div class="computerScoreBoard board">
+                <h3>Computer Life: </h3>
+                <span class="circle cl1"></span>
+                <span class="circle cl2"></span>
+                <span class="circle cl3"></span>
+                <span class="circle cl4 "></span>
+                <span class="circle cl5"></span>
             </div>
-        </div>
-        <div class="narration-container">
-            <p class="narration"></p>
         </div>
     </div>
+
+    <div class="start">
+        <button class="startButton">Click Anywhere To Start The Game</button>
+    </div>
+
+    <div class="human">
+        
+    </div>
+
+    <div class="rps-menu">
+        <div class="choice">
+            <button class="rps-choice" value="rock" disabled>
+                <a class="arrow-con"><i class="arrow"></i></a>
+                Rock
+            </button>
+        </div>
+        <div class="choice">
+            <button class="rps-choice" value="paper" disabled>
+                <a class="arrow-con"><i class="arrow"></i></a>
+                Paper
+            </button>
+        </div>
+        <div class="choice">
+            <a class="arrow-con"><i class="arrow"></i></a>
+            <button class="rps-choice" value="scissors" disabled>
+                <a class="arrow-con"><i class="arrow"></i></a>
+                Scissors
+            </button>
+        </div>
+    </div>
+
+    <div class="narration-container">
+        <p class="narration"></p>
+    </div>
+
 </body>
 </html>
