Fix the bug in updating lives

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
 
     <div class="start">
-        <button class="startButton">Click Anywhere To Start The Game</button>
+        <button class="startButton">Click Here To Start The Game</button>
     </div>
 
     <div class="human">
@@ -42,20 +42,20 @@
 
     <div class="rps-menu">
         <div class="choice">
-            <button class="rps-choice" value="rock" disabled>
+            <button class="rps-choice" value="rock">
                 <a class="arrow-con"><i class="arrow"></i></a>
                 Rock
             </button>
         </div>
         <div class="choice">
-            <button class="rps-choice" value="paper" disabled>
+            <button class="rps-choice" value="paper">
                 <a class="arrow-con"><i class="arrow"></i></a>
                 Paper
             </button>
         </div>
         <div class="choice">
             <a class="arrow-con"><i class="arrow"></i></a>
-            <button class="rps-choice" value="scissors" disabled>
+            <button class="rps-choice" value="scissors">
                 <a class="arrow-con"><i class="arrow"></i></a>
                 Scissors
             </button>
