Add the end game results display

--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
 <body>
     <h1>Rock Paper Scissors</h1>
     <div class="start">
-        <button class="startButton">Click Here To Start The Game</button>
+        <button class="startButton">Start Game</button>
+    </div>
+
+
+    <div class="popup">
+        <div class="popup-content">
+            <span class="close">&times;</span>
+        </div>
     </div>
 
     <div class="display">
